testsuite/single/tests/compiler/fail/bad_local_init.lpc
void foo() {
    int x += 1;
}
